--- a/remote-gh-bundle/bundle.yaml
+++ b/remote-gh-bundle/bundle.yaml
@@ -1,4 +1,4 @@
 apiVersion: "1"
 version: "3"
 id: "orphan"
-description: "new bundle with no inheritance"
+description: "new bundle with no inheritance - remote"
